Bug 796192 - A/B test HTTP Pipelining on pre-release channel. r=mcmanus